odds recycler design resolved

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,6 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # API Keys
-ODDS_API_KEY=d185458d64f577e0095d30cfd59fe8c8
+#ODDS_API_KEY=d185458d64f577e0095d30cfd59fe8c8
+ODDS_API_KEY=c14e8933a9dacc573285becdb1771df9
 ODDS_API_BASE_URL=https://api.the-odds-api.com/v4/
